--- a/style.css
+++ b/style.css
@@ -131,3 +131,9 @@ footer a:hover {
   text-decoration: underline;
   font-weight: 700;
 }
+
+@media (max-width: 600px) {
+  .card {
+    width: 350px;
+  }
+}
